k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker-deployment
spec:
    replicas: 1
    selector: #we want to match the selector of the pods that are going to be managed by this deployment
        matchLabels:
            component: worker
    template:
        metadata:
            labels:
                component: worker
        spec:   #This is going to be the spec that specifies the container that this pod is going to be running
            containers:
                - name: worker
                  image: ahy94/k8s-dockerizing-multiple-services-worker #No ports required because the worker doesn't need outside connection to it. THe nature of the work application is that it only requests out to the redis. therefore we do not need to define any ports fields to expose ports of the container.
