k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: web #We need provide a selector so that this cluster ip needs to know which set of pods it is going to be providing access to
    ports:
        - port: 3000
          targetPort: 3000
