k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: server-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: server #The selector should match the one that we defined in the deployment file for the different serversn
    ports: #We need to define the ports that this service is going to manage
        - port: 5000
          targetPort: 5000
