k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations: #additional highr level configuration the Ingress that it gets created
        kubernetes.io/ingress.class: nginx #Tells k8s that we want to create an ingress controll based on the nginx project
        nginx.ingress.kubernetes.io/rewrite-target: /$1 #this is going to  configure how the actual copy of nginx behaves.
spec:
    rules:
        - http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend: 
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
